Updated flink to use v0.9.1